# tg-reviewer-bot

./: .gitignore  README.md  ban.py  config.production.toml  db_op.py  env.py  main.py  pyproject.toml  requirements.txt  review.py  review_utils.py  stats.py  submit.py  submit_single.py  utils.py
src/: ban.py  config.py  review.py  review_utils.py  stats.py  submit.py  submit_single.py  utils.py
src/database/: __init__.py  ban_user.py  db_op.py  reviewer.py  submitter.py
src/tg_reviewer_bot/: __main__.py  ban.py  const.py  main.py  review.py  submit.py  utils.py
