[tool.poetry]
name = "tg-reviewer-bot"
version = "0.1.0"
description = "每日沙雕墙"
authors = ["moehanabi <moehanabichan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
python-telegram-bot = "^21.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
